
The Register's completion list can now handle houses or forms. 

Several community functions, including listin and
check_community_attendance adapted to use yid to limit the sids
included.

The method used by list_sid_responsibles changed to include all
communities with a permissions group. Could increase the number of
users receiving email alerts about a student.




Version ClaSS-0.9.42 release (2011/07/18)
-----------------------------------------

For js compatibility removed class as a var name form bookfunctions.

Applied iconv to the export_students from InfoBook.

Exposed subjectstatus through the new_report scripts.

Fixed the year_end scripts so that report and assessment properties
are carried forward properly.

Fixed sorting by date for profile statements on reports.

Fixed formatting numbers in export from MarkBook.

Added tutor as a contact relationship.

Replaced the last deprecated split from html_functions and checkEntry.

Import student data now inisists on a postcode for a valid
address. Can also use either upn, former upn or sid to identify
students.

New functionality in Register for pop-up notices including two new db tables.

Improved the MarkBook's column_export, now formats percentages and raw values in
Excel correctly.

Included the stop in display_student_transport.

Simplified the register to use only newcomid or newcid to identify registration group.

Added postcode to the InfoBook options for searching contacts.

Extra guardian field for address title used by preferrence on labels.

Reworked the explanation option on labels, adding enrolment number as an option.

Reworked the treatment of derived columns in class_view_table to use prefetched scores.

The profile sum for compound category columns now implemented.

Added a bottom row of column averages to the markbook table.

A change to the use of enrol_cutoffdate to indicate the end of the
changes to the current year. 
